# FEUP-DA

./: README.md
T1/codigo/: CMakeLists.txt  README.md  main.cpp
T1/codigo/include/: Application.h  Cargo.h  Menu.h  Order.h  ReadFiles.h  Starter.h  Truck.h
T1/codigo/src/: Application.cpp  Cargo.cpp  Menu.cpp  Order.cpp  ReadFiles.cpp  Starter.cpp  Truck.cpp
T1/documentation/html/: _application_8h_source.html  _cargo_8h_source.html  _menu_8h_source.html  _order_8h_source.html  _read_files_8h_source.html  _starter_8h_source.html  _truck_8h_source.html  annotated.html  class_application-members.html  class_application.html  class_cargo-members.html  class_cargo.html  class_main_menu-members.html  class_main_menu.html  class_menu-members.html  class_menu.html  class_order-members.html  class_order.html  class_read_files-members.html  class_read_files.html  class_starter-members.html  class_starter.html  class_truck-members.html  class_truck.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js
T1/documentation/latex/: _application_8h_source.tex  _cargo_8h_source.tex  _menu_8h_source.tex  annotated.tex  (+16 more)
T1/input/: GUIDE
T2/codigo/: CMakeLists.txt  README.md  main.cpp
T2/codigo/include/: Application.h  MaxHeap.h  Menu.h  ReadFiles.h  Starter.h  graph.h
T2/codigo/src/: Application.cpp  Menu.cpp  ReadFiles.cpp  Starter.cpp  graph.cpp
T2/input/: README.md  in11.txt  in12.txt  in13.txt  in14.txt  in15.txt  in16.txt  in17.txt  in18.txt  in19.txt  in20.txt  info.txt
(+149 files in other folders)
